# QuickerMD

./: 404.html  Cargo.toml  README.md  index.html  mkdocs.yml
.github/workflows/: rust.yml
cli/usage/: index.html
config/adding-languages/: index.html
config/command/: index.html
config/compiled-vs-interpreted/: index.html
config/example-config/: index.html
config/file-extensions/: index.html
config/getting-started/: index.html
config/prefix/: index.html
config/redirecting-input/: index.html
config/running/: index.html
config/templating/: index.html
docs/: index.md
docs/cli/: usage.md
docs/config/: adding-languages.md  command.md  compiled-vs-interpreted.md  example-config.md  file-extensions.md  getting-started.md  prefix.md  redirecting-input.md  running.md  templating.md
examples/: config.toml  run.ps1
examples/python/: 1_matplotlib.py
quickermd/: Cargo.toml
quickermd/src/: config.rs  lib.rs  output.rs  runner.rs  user_config.rs  utils.rs
search/: search_index.json
src/: cli.rs  collect.rs  config.rs  main.rs  outputer.rs  resolver.rs  templates.rs  utils.rs  variables.rs
variable_parser/: Cargo.toml
variable_parser/src/: lib.rs
